crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__bell_alias.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..9,
            value: String(
                ExprString {
                    range: 0..9,
                    value: StringExprValue {
                        inner: Single(
                            StringLiteral {
                                range: 0..9,
                                value: "\u{7}",
                                unicode: false,
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
