crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__character_tabulation_with_justification_alias.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..45,
            value: String(
                ExprString {
                    range: 0..45,
                    value: StringExprValue {
                        inner: Single(
                            StringLiteral {
                                range: 0..45,
                                value: "\u{89}",
                                unicode: false,
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
