crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__delete_alias.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..12,
            value: String(
                ExprString {
                    range: 0..12,
                    value: StringExprValue {
                        inner: Single(
                            StringLiteral {
                                range: 0..12,
                                value: "\u{7f}",
                                unicode: false,
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
