crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__escape_char_in_byte_literal.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..13,
            value: Bytes(
                ExprBytes {
                    range: 0..13,
                    value: BytesExprValue {
                        inner: Single(
                            BytesLiteral {
                                range: 0..13,
                                value: [
                                    111,
                                    109,
                                    107,
                                    109,
                                    111,
                                    107,
                                    92,
                                    88,
                                    97,
                                    97,
                                ],
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
