crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__escape_octet.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..14,
            value: Bytes(
                ExprBytes {
                    range: 0..14,
                    value: BytesExprValue {
                        inner: Single(
                            BytesLiteral {
                                range: 0..14,
                                value: [
                                    35,
                                    97,
                                    4,
                                    83,
                                    52,
                                ],
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
