crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__form_feed_alias.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..15,
            value: String(
                ExprString {
                    range: 0..15,
                    value: StringExprValue {
                        inner: Single(
                            StringLiteral {
                                range: 0..15,
                                value: "\u{c}",
                                unicode: false,
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
